# Infernos-DCtool

./: .gitignore  CMakeLists.txt  README.md
DiscordToolCPP/: ConsoleUtils.cpp  ConsoleUtils.h  DiscordToolCPP.cpp  DiscordToolCPP.sln  DiscordToolCPP.vcxproj  DiscordToolCPP.vcxproj.filters  Functions.cpp  Functions.h  curl.h  json.hpp  nitro_generator.cpp  nitro_generator.hpp
NSIS/: Infernos_DCTool.nsi
include/: TitleBar.h  Webhook.h  functionHelper.h  home.h  layoutHelper.h  mainwindow.h  nitroGen.h  whCheck.h  whSend.h  whSpam.h
resources/: resources.qrc
src/: DiscordToolCPP.sln  TitleBar.cpp  Webhook.cpp  functionHelper.cpp  home.cpp  layoutHelper.cpp  main.cpp  mainwindow.cpp  nitroGen.cpp  whCheck.cpp  whSend.cpp  whSpam.cpp
src/DiscordToolCPP/: ConsoleUtils.cpp  DiscordToolCPP.vcxproj  Functions.h  Webhook.cpp  Webhook.hpp  curlver.h  easy.h  nitro_generator.cpp  response.json
